--- a/homework3/src/app/user/user.component.html
+++ b/homework3/src/app/user/user.component.html
@@ -5,7 +5,7 @@
 <div id=boxes>
     <div id=sidebox>
         <h1>{{fname | fullname : fname : lname | uppercase}}</h1>
-        <!-- <p id="status" target=""><b>{{ }}</b></p> -->
+        <p id="status" target=""><b>{{ currentStatus }}</b></p>
         <table>
             <tr>
                 <td><b>Login Id</b></td>
