--- a/homework1/src/app/app.component.html
+++ b/homework1/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="titlebox">
-  <h1>
-    Hello, Angular!
-  </h1>
-  <p>Created this component manually.</p>
+<div class="container-fluid">
+  <app-component1></app-component1>
+  <div class="row">
+      <div class="col-md-6 col-lg-6 col-sm-6">
+        <app-component2></app-component2>
+      </div>
+      <div class="col-md-6 col-lg-6 col-sm-6">
+        <app-component2></app-component2>
+      </div>
+  </div>
 </div>
-
-<app-component1></app-component1>
-
-
-<app-component2></app-component2>
