--- a/homework1/src/app/component1/component1.component.html
+++ b/homework1/src/app/component1/component1.component.html
@@ -1,6 +1,7 @@
-<div>
-    <h2>Component One</h2>
-    <p>component1 works!</p>
+<div class="jumbotron">
+    <h1 class="display-4">Hello, Angular</h1>
+    <p class="lead">Created this component manually for fun </p>
+    <hr class="my-4">
 </div>
 
 
