--- a/homework1/src/app/component2/component2.component.css
+++ b/homework1/src/app/component2/component2.component.css
@@ -1,10 +1,3 @@
-div{
-    float: right;
-    /* margin-left: 10%; */
-    margin-right: 15%;
-    border : 1px solid grey;
-    padding: 40px;
-    padding-left: 120px;
-    padding-right: 120px;
-
+.card {
+    width: 20rem;
 }
