--- a/homework1/src/app/component2/component2.component.html
+++ b/homework1/src/app/component2/component2.component.html
@@ -1,4 +1,7 @@
-<div>
-    <h2>Component Two</h2>
-    <p>component2 works!</p>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Component One</h5>
+        <p class="card-text">Some Quick example component using angular cli</p>
+    </div>
 </div>
+
